# financial_analysis

./: .env.example  .env.modal  .gitignore  ARCHITECTURE.md  BANKING_RATIOS_COMPLETE.md  BANKING_RATIOS_LOW_HANGING_FRUIT.md  BANKING_SECTOR_DETECTION.md  BANKING_SECTOR_RATIOS_ANALYSIS.md  CACHE_BUG_FIX.md  COST_OPTIMIZATION_ANALYSIS.md  Creating a Multi Year Financials Data Api - EdgarTools - Python Library for SEC Data Analysis.html  DATABASE_INTEGRATION.md  DEPLOYMENT_PHASES.md  DEVNOTES_UPDATED_RECOMMENDATIONS.md  DEV_WORKFLOW.md  DOCUMENT_CLEANUP.md  Dockerfile  FINANCIALS_AGENT_REFACTOR.md  GIT_COMMANDS.txt  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  ISSUES_ENHANCEMENTS.md  LICENSE  MANAGER_ATTRIBUTE_FIX.md  PHASE_0_COMPLETE.md  PHASE_1_5_COMPLETE.md  PHASE_1_6_COMPLETE.md  QUICKSTART.md  RAG_SYNTHESIS_INTEGRATION.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_MIGRATION_SUMMARY.md  README.md  RISK_EXTRACTION_ENHANCEMENT.md  STRIKETHROUGH_TEXT_FIX.md  UX_REDESIGN_PROPOSAL.md  VISUALIZATION_FIX.md  VISUALIZATION_IMPLEMENTATION.md  analyze_report_quality.py  backfill_metadata.py  claude.md  (+29 more)
.claude/: CLAUDE.md
.github/: copilot-instructions.md
Creating a Multi Year Financials Data Api - EdgarTools - Python Library for SEC Data Analysis_files/: css  saved_resource
docs/: AUTHENTICATION_GUIDE.md  AUTH_OPTIONS_COMPARISON.md  CLAUDE.md  CODE_REVIEW.md  COMPANY_LOOKUP_ENHANCEMENT.md  DAY4_UNIFIED_MANAGER.md  DEVELOPMENT_ROADMAP.md  EDGARTOOLS_ANALYSIS.md  GPT5_UPGRADE.md  GPT5_VERBOSITY_FIX.md  GPT5_WITH_MINIMAL_REASONING.md  GRADIO_TABS_ENHANCEMENT.md  README.md  (+28 more)
(+189 files in other folders)
