[project]
name = "financial_analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai-agents>=0.4.2",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "datetime>=5.5",
    "gradio>=4.0.0",
    "yfinance>=0.2.0",
    "plotly>=5.0.0",
]
