[project]
name = "financial_analysis"
version = "0.1.0"
description = "AI-powered financial research system with SEC EDGAR integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "openai-agents>=0.4.2",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.0.0",
    "yfinance>=0.2.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",  # For static chart export (PNG)
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pandas>=2.0.0",
    "edgartools>=2.29.0",
    "chromadb>=0.4.24",
    "great-tables>=0.8.0",
    "supabase>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["financial_research_agent*"]
exclude = ["tests*", "scripts*", "docs*", "*.egg-info*", "chroma_db*"]

[tool.setuptools.package-data]
financial_research_agent = ["**/*.md", "**/*.txt"]
